--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
- 
+flask==2.3.3
+werkzeug==2.3.7
+opencv-python==4.8.1.78
+pillow==10.0.1
+numpy==1.24.3
+torch>=1.6.0
+torchvision
+torchgeometry
+kornia==0.8.1 
